--- a/style.css
+++ b/style.css
@@ -6,8 +6,11 @@ body {
 .header {
   display: flex;
   justify-content: center;
-  font-size: 1.5em;
+  padding: 1em;
   width: 100%;
+}
+h1 {
+  font-size: 4em;
 }
 
 .footer {
@@ -49,6 +52,7 @@ main {
 
 .aside-container {
   margin-top: 3em;
+  margin-right: 3em;
 }
 
 .spacer {
